Update man pages

--- a/man/netpbm.1
+++ b/man/netpbm.1
@@ -1001,8 +1001,8 @@ http://www.ijg.org)
 \&):
 
 To dump (interpret) an EXIF header: Exifdump ((
-.UR http://topo.math.u-psud.fr/~bousch/exifdump.py
-http://topo.math.u-psud.fr/~bousch/exifdump.py)
+.UR http://www.math.u-psud.fr/~bousch/exifdump.py
+http://www.math.u-psud.fr/~bousch/exifdump.py)
 .UE
 \&)
 or 
@@ -1289,17 +1289,12 @@ Commerce At Light Speed
 
 
 
-The US Navy publishes
-.BR "specs" (1)\c
-\&
-for it.
-.sp
-The web page 
-.UR http://www.sollers.ca/projects/cals2tiff/
-http://www.sollers.ca
+The US Navy publishes 
+.UR https://www.navsea.navy.mil/Home/Warfare-Centers/NSWC-Carderock/Resources/Technical-Information-Systems/IETMs/Specifications-Standards/CALS-Standards/
+specs
 .UE
 \&
-describes a program for converting from CALS to TIFF.
+for it.
 
 .IP \(bu
 
