--- a/man/pamtris.1
+++ b/man/pamtris.1
@@ -3,7 +3,7 @@
 .\" Do not hand-hack it!  If you have bug fixes or improvements, please find
 .\" the corresponding HTML page on the Netpbm website, generate a patch
 .\" against that, and send it to the Netpbm maintainer.
-.TH "Pamtris User Manual" 0 "02 October 2018" "netpbm documentation"
+.TH "Pamtris User Manual" 0 "15 June 2019" "netpbm documentation"
 
 
 
@@ -189,7 +189,7 @@ The following is an example of strip mode:
     \fP
 .fi
 .PP
-Save the above code in a file named \fIstrip.tris\fP (for instance)
+Save the above code in a file named \fBstrip.tris\fP (for instance)
 and process it with:
   
 .nf
@@ -278,14 +278,14 @@ to produce a picture of NAMCO's Pac-Man.  It generates dozens of
 #define WIDTH   256
 #define HEIGHT  WIDTH
 
-int main()
+int main(void)
 {
         int const center_x = 0.5 * WIDTH;
         int const center_y = 0.5 * HEIGHT;
 
         double const radius = 0.48 * WIDTH;
         
-        int const sectors = round(0.125 * PI * radius) + 1;
+        int const sectors = round(0.125 * PI * radius + 1);
 
         puts("mode triangles");
 
@@ -299,13 +299,13 @@ int main()
         printf("vertex %d %d 1\en", center_x, center_y);
         puts("attribs 255 128 0");
 
-        double const angle_factor = PI2 / (sectors - 1);
+        double const angle_step = PI2 / (sectors - 1);
 
         unsigned int i;
 
         for (i = 0; i < sectors; i++)
         {
-                double const angle = angle_factor * i;
+                double const angle = angle_step * i;
                 int const x = round(cos(angle) * radius + center_x);
                 int const y = round(sin(angle) * radius + center_y);
 
@@ -579,11 +579,11 @@ X-axis goes from left to right, and the Y-axis from top to bottom. A
 negative value for \fIx\fP indicates a column that many tuples to the
 left of the leftmost column of the frame buffer.  Likewise, a negative
 value for \fIy\fP indicates a row that many tuples above the uppermost
-row of the frame buffer. <u>Observe that those coordinates correspond
+row of the frame buffer. Observe that those coordinates correspond
 directly to a particular point in the coordinate system delineated
 above, regardless of whether you are trying to draw an image which is
 supposed to look as if viewed "in perspective" or not; \fBpamtris\fP
-does \fInot\fP "warp" the coordinates you give in any way.</u>
+does \fInot\fP "warp" the coordinates you give in any way.
 Therefore, if you want to draw images in perspective, you must compute
 values for \fIx\fP and \fIy\fP already projected into \fBpamtris\fP'
 coordinate system yourself, using an external perspective projection
@@ -617,17 +617,13 @@ typical model
 \&
 of the so-colled "viewing frustum" used to project vertices in 3D
 "world space" onto a planar "image space." The value of \fIw\fP for a
-vertex is simply the dot product
-.UR #vertex_note
-*
-.UE
-\& between the
-3D vector \fBr\fP and the 3D unit vector \fBn\fP (i. e. the length of
-the orthogonal projection of \fBr\fP on the line determined by \fBn\fP),
-in world units (such as pixels, centimeters, inches, etc.); where
-\fBr\fP is the vector which goes from the projection reference point
-(PRP, or "eye") to the vertex, and \fBn\fP is just the view-plane
-normal (VPN) of unit length which points away from the PRP.
+vertex is simply the
+<a id="vertex_note_link" href="#vertex_note">dot product*</a> between the 3D
+vector \fBr\fP and the 3D unit vector \fBn\fP (i.e. the length of the
+orthogonal projection of \fBr\fP on the line determined by \fBn\fP) in
+pixels; where \fBr\fP is the vector which goes from the projection reference
+point (PRP, or "eye") to the vertex, and \fBn\fP is a view-plane normal
+(VPN) of unit length which points away from the PRP.
 .sp
 In case you are performing a mere multiplication of a 4D vector with
 x, y, z and w components by a so-called perspective projection 4x4 matrix
@@ -635,7 +631,7 @@ in order to compute the projection of a vertex onto the image plane,
 then you may supply for \fIw\fP a value which is directly proportional
 to the absolute value of the w component of the resulting vector.
 .sp
-<a id="vertex_note" href="#vertex_note">*</a>
+[<a id="vertex_note" href="#vertex_note_link">*</a>]:
 For any two 3D vectors \fBa\fP and \fBb\fP, with respective
 real scalar components a<sub>x</sub>, a<sub>y</sub>, a<sub>z</sub> and
 b<sub>x</sub>, b<sub>y</sub>, b<sub>z</sub>, the dot product between
@@ -736,9 +732,8 @@ successfully. If that happens, no lines of input will be read anymore and
 .TP
 \fBquit\fP
 .sp
-This terminates \fBpamtris\fP. The program will not read any more lines of
-input after this command, and ignores any further tokens on the
-same line as it.
+This terminates \fBpamtris\fP. It will not read any more lines of input
+after this command.
 
 
 
@@ -764,17 +759,13 @@ pictures in perspective, make sure to provide adequate values for the
 .UR #cmd_vertex
 see above
 .UE
-\&) so the resulting samples in
+\&) so that the resulting samples in
 the images produced by \fBpamtris\fP are perspective-correct.
 .PP
 You might want to consider using
 .BR "\fBpnmtile\fP" (1)\c
 \& to make textures which are
 inteded to be "repeated" along triangle meshes.
-.PP
-Since the \fIw\fP parameter to the \fBvertex\fP command was new in Netpbm
-10.85 (December 2018), it is not really possible to achieve
-perspective-correct texturing before that.
 
 
 .SS Anti-aliased edges
@@ -784,9 +775,9 @@ However, it is possible to obtain anti-aliased images through a
 "super-sampling" approach: draw your image(s) at a size larger than
 the desired final size, and then, when all post-processing is done,
 down-scale the final image(s) to the desired size. Drawing images with
-twice the desired width and height, then down-scaling them to the
-desired size using a quadratic filter, might produce results which are
-often good enough.
+twice the desired width and height, then down-scaling them to the intended
+size while disregarding gamma (i.e. what \fBpamscale\ -linear\fP does)
+often produces good enough results.
 
 
 .UN seealso
