--- a/man/pbmpage.1
+++ b/man/pbmpage.1
@@ -3,7 +3,7 @@
 .\" Do not hand-hack it!  If you have bug fixes or improvements, please find
 .\" the corresponding HTML page on the Netpbm website, generate a patch
 .\" against that, and send it to the Netpbm maintainer.
-.TH "Pbmpage User Manual" 0 "01 May 2000" "netpbm documentation"
+.TH "Pbmpage User Manual" 0 "08 June 2019" "netpbm documentation"
 
 .UN name
 .SH NAME
@@ -62,7 +62,7 @@ exact center of the page.
 .TP
 \fB3\fP
 Two diagonal line segments, one starting at the upper left corner of the
-page, the other starting from the lower left corner of the page.  Both
+page, the other starting from the lower right corner of the page.  Both
 extend 1/2" toward the center of the page at 45 degrees.
 
 
