--- a/doc/HISTORY
+++ b/doc/HISTORY
@@ -4,7 +4,12 @@ Netpbm.
 CHANGE HISTORY 
 --------------
 
-not yet  BJH  Release 10.88.00
+19.12.03 BJH  Release 10.88.01
+
+              anytopnm: Fix unpredictable behavior when file name contains
+              spaces.
+
+19.09.28 BJH  Release 10.88.00
 
               pnmquant: Fail if user specifies more than one of -meanpixel,
               -meancolor, and -center, rather than just pick one.
