--- a/man/pamhue.1
+++ b/man/pamhue.1
@@ -6,7 +6,7 @@
 .TH "Pamhue User Manual" 0 "07 January 2018" "netpbm documentation"
 
 .SH NAME
-pamhue - change a Netpbm image's Hues
+pamhue - change a Netpbm image's hues
 
 .UN synopsis
 .SH SYNOPSIS
@@ -41,7 +41,7 @@ is made of a combination of at most two of the primary colors.
 In the HSV model, hue is an angular position on the color wheel.
 .PP
 With \fBpamhue\fP, you indicate an angle by which to change all the hues
-in the image; for example you can say move it 60 degrees clockwises.  That
+in the image; for example you can say move it 60 degrees clockwise.  That
 would change all red pixels to yellow and all yellow pixels to green, etc.
   
 .PP
