--- a/man/pamtopdbimg.1
+++ b/man/pamtopdbimg.1
@@ -7,7 +7,7 @@
 
 .SH NAME
 
-pamtodbimg - convert a Netpbm image to a Palm Pilot Image Viewer PDB Image
+pamtopdbimg - convert a Netpbm image to a Palm Pilot Image Viewer PDB Image
 
 .UN synopsis
 .SH SYNOPSIS
