--- a/man/pbmtoybm.1
+++ b/man/pbmtoybm.1
@@ -5,19 +5,18 @@
 .\" against that, and send it to the Netpbm maintainer.
 .TH "Pbmtoybm User Manual" 0 "06 March 1990" "netpbm documentation"
 
-.UN lbAB
 .SH NAME
 
-pgmtoybm - convert a PBM image into a Bennet Yee "face" file
+pbmtoybm - convert a PBM image into a Bennet Yee "face" file
 
-.UN lbAC
+.UN synopsis
 .SH SYNOPSIS
 
 \fBpbmtoybm\fP
 
 [\fIpbmfile\fP]
 
-.UN lbAD
+.UN description
 .SH DESCRIPTION
 .PP
 This program is part of
@@ -28,14 +27,14 @@ This program is part of
 file acceptable to the \fBface\fP and \fBxbm\fP programs by Bennet
 Yee (\fIbsy+@cs.cmu.edu\fP).
 
-.UN lbAE
+.UN seealso
 .SH SEE ALSO
 .BR "ybmtopbm" (1)\c
 \&,
 .BR "pbm" (5)\c
 \&,
 
-.UN lbAF
+.UN author
 .SH AUTHOR
 
 Copyright (C) 1991 by Jamie Zawinski and Jef Poskanzer.
