--- a/man/pfmtopam.1
+++ b/man/pfmtopam.1
@@ -6,7 +6,7 @@
 .TH "Pfmtopam User Manual" 0 "10 April 2004" "netpbm documentation"
 
 .SH NAME
-pamtopfm - Convert PFM (Portable Float Map) image to Netpbm format
+pfmtopam - Convert PFM (Portable Float Map) image to Netpbm format
 
 .UN synopsis
 .SH SYNOPSIS
