--- a/man/pamcut.1
+++ b/man/pamcut.1
@@ -90,18 +90,17 @@ read, more expressive, and allow you to use defaults.
 If you use both options and arguments, the two specifications get
 mixed in an unspecified way.
 .PP
-To use arguments, specify all four of the \fIleft\fP,
-\fItop\fP, \fIwidth\fP, and \fIheight\fP arguments.  \fIleft\fP
-and \fItop\fP have the same effect as specifying them as the argument
-of a \fB-left\fP or \fB-top\fP option, respectively.  \fIwidth\fP
-and \fIheight\fP have the same effect as specifying them as the
-argument of a \fB-width\fP or \fB-height\fP option, respectively,
-where they are positive.  Where they are not positive, they have the
-same effect as specifying one less than the value as the argument to a
-\fB-right\fP or \fB-bottom\fP option, respectively.  (E.g.
-\fIwidth\fP = 0 makes the cut go all the way to the right edge).
-Before July 2000, negative numbers were not allowed for \fIwidth\fP
-and \fIheight\fP.
+To use arguments, specify all four of the \fIleft\fP, \fItop\fP,
+\fIwidth\fP, and \fIheight\fP arguments.  \fIleft\fP and \fItop\fP have
+the same effect as specifying them as the argument of a \fB-left\fP or
+\fB-top\fP option, respectively.  \fIwidth\fP and \fIheight\fP have the
+same effect as specifying them as the argument of a \fB-width\fP or
+\fB-height\fP option, respectively, where they are positive.  Where they are
+not positive, they have the same effect as specifying one less than the value
+as the argument to a \fB-right\fP or \fB-bottom\fP option, respectively.
+(E.g. \fIwidth\fP = 0 makes the cut go all the way to the right edge).
+Before July 2000, negative numbers were not allowed for \fIwidth\fP and
+\fIheight\fP.
 .PP
 Input is from Standard Input if you don't specify the input file
 \fIpnmfile\fP.
