--- a/man/picttoppm.1
+++ b/man/picttoppm.1
@@ -89,7 +89,7 @@ about.
 
 The PICT file format is a general drawing format.  \fBpicttoppm\fP
 does not recognize all the drawing commands, but it does fully
-implement all image commands and mostly implement line, rectangle,
+implement all image commands and mostly implements line, rectangle,
 polygon and text drawing.  It is useful for converting scanned images
 and some drawing conversion.
 .PP
@@ -115,7 +115,7 @@ Macintosh.  You can find more font numbers and information about fonts
 in Macintosh documentation.
 
 .UN fontdir
-.SS FONT DIR FILE FORMAT
+.SS Font Directory File Format
 .PP
 Each line in the file is either a comment or font information.  A
 comment begins with \fB#\fP.  The font information consists of 4
