--- a/man/xbmtopbm.1
+++ b/man/xbmtopbm.1
@@ -5,29 +5,28 @@
 .\" against that, and send it to the Netpbm maintainer.
 .TH "Xbmtopbm User Manual" 0 "31 August 1988" "netpbm documentation"
 
-.UN lbAB
 .SH NAME
 
 xbmtopbm - convert an X11 or X10 bitmap to a PBM image
 
-.UN lbAC
+.UN synopsis
 .SH SYNOPSIS
 
 \fBxbmtopbm\fP
 
 [\fIbitmapfile\fP]
 
-.UN lbAD
+.UN description
 .SH DESCRIPTION
 .PP
 This program is part of
 .BR "Netpbm" (1)\c
 \&.
 .PP
-\fBxbmtopbm\fP reads an X11 or X10 bitmap as input and produces a
-PBM image as output.
+\fBxbmtopbm\fP reads an X11 or X10 bitmap as input and produces a PBM
+image as output.
 
-.UN lbAE
+.UN seealso
 .SH SEE ALSO
 .BR "pbmtoxbm" (1)\c
 \&, 
@@ -36,7 +35,7 @@ PBM image as output.
 .BR "pbm" (5)\c
 \&
 
-.UN lbAF
+.UN author
 .SH AUTHOR
 .PP
 Copyright (C) 1988 by Jef Poskanzer.
