--- a/man/pbmtext.1
+++ b/man/pbmtext.1
@@ -3,7 +3,7 @@
 .\" Do not hand-hack it!  If you have bug fixes or improvements, please find
 .\" the corresponding HTML page on the Netpbm website, generate a patch
 .\" against that, and send it to the Netpbm maintainer.
-.TH "Pbmtext User Manual" 0 "01 December 2018" "netpbm documentation"
+.TH "Pbmtext User Manual" 0 "28 May 2020" "netpbm documentation"
 
 .SH NAME
 
@@ -20,6 +20,7 @@ pbmtext - render text into a PBM image
 [\fB-lspace\fP \fIpixels\fP]
 [\fB-nomargins\fP]
 [\fB-width\fP \fIpixels\fP]
+[\fB-load-entire-font\fP]
 [\fB-dry-run\fP]
 [\fB-text-dump\fP]
 [\fItext\fP]
@@ -45,9 +46,19 @@ by spaces, except that if there are no non-option command line arguments, it
 is Standard Input.
   
 .PP
-In the image, each line of input is a line of output.  Formatting
-characters such as newline have no effect on the formatting; like any
-unprintable character, they turn into spaces.
+In the image, each line of input is a line of output.  Lines are
+  delimited by newline characters.
+.PP
+The program renders any character in an input line that is not in the font
+  as a space.  Note that control characters usually aren't in the font, but
+  some fonts have glyphs for them.  The newline characters that delimit lines
+  in of Standard Input are not in any line.
+.PP
+Tab characters are rendered as a number of spaces; any entry in the font
+  for the tab code point is irrelevant.  The number of spaces is such as to
+  create tab stops every 8 characters.  Note that this is not useful if the
+  font is proportional.
+  
 .PP
 The image is just wide enough for the longest line of text, plus
 margins, and just high enough to contain the lines of text, plus
@@ -172,6 +183,18 @@ the middle of a word and a line may begin or end with white space.
 If the input is multiple lines, \fBpbmtext\fP assumes you already
 have line breaks where they make sense, and \fBpbmtext\fP simply
 truncates each line as needed to fit the specified width.
+
+.TP
+\fB-load-entire-font\fP
+  
+When you use a BDF font, \fBpbmtext\fP will normally load from the font
+    only the characters needed for your text, not wasting time loading other
+    characters.  With this option, \fBpbmtext\fP will instead read the entire
+    font.  It won't make any difference in the rendered output, but it lets
+    you check the integrity of the font file.
+.sp
+This option was new in Netpbm 10.91 (June 2020).  Before that,
+\fBpbmtext\fP always reads the entire font.
 
 .TP
 \fB-dry-run\fP
