--- a/man/ppmforge.1
+++ b/man/ppmforge.1
@@ -196,7 +196,7 @@ balls" like Europa.
 The inclination angle of the planet with regard to its primary
 star is set to \fIangle\fP, which can be any floating point value
 from -90 to 90.  The inclination angle can be thought of as
-specifying, in degrees, the ``season'' the planet is presently
+specifying, in degrees, the ``season'' the planet is currently
 experiencing or, more precisely, the latitude at which the star
 transits the zenith at local noon.  If 0, the planet is at equinox;
 the star is directly overhead at the equator.  Positive values
